// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api with GET route at root 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "get": {
        "operationId": "get",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-c5395e41_37F21C2B.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "consumes": [
          "application/json",
        ],
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "requestTemplates": {
            "application/json": "{\\"statusCode\\": 404}",
          },
          "responses": {
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode: 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with multiple methods on same route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "get": {
        "operationId": "get",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-c5395e41_37F21C2B.arn}/invocations",
        },
      },
      "put": {
        "operationId": "put",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-c5395e41_37F21C2B.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "consumes": [
          "application/json",
        ],
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "requestTemplates": {
            "application/json": "{\\"statusCode\\": 404}",
          },
          "responses": {
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode: 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;
